set min-width to prevent page jumping when thumbnails load
git-svn-id: https://cbilsvn.pmacs.upenn.edu/svn/apidb/ApiCommonWebsite/branches/gus4@72971 735e2a04-f8fc-0310-8a1b-f2942603c481

--- a/Site/webapp/wdkCustomization/css/client.css
+++ b/Site/webapp/wdkCustomization/css/client.css
@@ -141,6 +141,7 @@ h4 {
   margin-top: 16px;
   display: inline-block;
   max-width: 100%;
+  min-height: 140px;
   overflow: auto;
   white-space: nowrap;
 }
